# picroom

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  audit.toml  deny.toml  tarpaulin.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  integration.yml  release.yml
crates/admin/: Cargo.toml
crates/admin/src/: audit_cmd.rs  config_cmd.rs  lib.rs  migrate.rs  storage_test.rs  team.rs  user.rs
crates/admin/tests/: db.rs
crates/api/: Cargo.toml
crates/api/src/: error.rs  lib.rs  router.rs  state.rs
crates/api/src/extractors/: auth.rs  mod.rs
crates/api/src/handlers/: admin.rs  auth.rs  images.rs  mod.rs  system.rs  teams.rs
crates/api/src/middleware/: auth.rs  mod.rs  trace.rs
crates/api/tests/: api.rs
crates/audit/: Cargo.toml
crates/audit/src/: db_sink.rs  event.rs  lib.rs  reader.rs  sink.rs
crates/auth/: Cargo.toml
crates/auth/src/: api_token.rs  jwt.rs  lib.rs  oidc.rs  password.rs  rbac.rs
crates/auth/tests/: oidc.rs
crates/domain/: Cargo.toml
crates/domain/src/: clock.rs  error.rs  id.rs  image.rs  lib.rs  page.rs  permission.rs  role.rs  storage_key.rs  team.rs  user.rs
crates/imaging/: Cargo.toml
crates/imaging/src/: lib.rs  pipeline.rs
crates/imaging/src/processor/: avif.rs  mod.rs  probe.rs  resize.rs  thumbnail.rs  watermark.rs  webp.rs
crates/infra/: Cargo.toml
crates/infra/src/: cache.rs  clock.rs  config.rs  db.rs  id.rs  lib.rs  logging.rs  telemetry.rs
crates/s3compat/: Cargo.toml
crates/s3compat/src/: bucket.rs  error.rs  lib.rs  list.rs  middleware.rs  multipart.rs  object.rs  routes.rs  sigv4.rs
crates/service/: Cargo.toml
crates/service/src/: delete.rs  error.rs  lib.rs  permission.rs  query.rs  quota.rs  repo.rs  upload.rs
crates/service/tests/: upload.rs
crates/storage/: Cargo.toml
crates/storage/src/: any.rs  contract_test.rs  error.rs  lib.rs  signing.rs
crates/storage/src/driver/: local.rs  minio.rs  mod.rs  s3.rs
crates/storage/tests/: s3.rs
crates/worker/: Cargo.toml
crates/worker/src/: db_queue.rs  dlq.rs  job.rs  lib.rs  pool.rs  processor.rs  retry.rs
crates/worker/tests/: db_queue.rs
docker/: Dockerfile  config.example.toml  docker-compose.yml
docs/: code-review-2026-07-audit.md  coverage-plan.md  deployment.md  operations.md  plan.md  review-2025-07.md  review-2026-07.md  security.md  spec.md  tasks.md
docs/adr/: 0001-rust-and-axum.md  0002-cargo-workspace.md  0003-storage-trait-isp.md  0004-s3-compatibility.md  0005-rbac-model.md  0006-image-pipeline.md  0007-security-hardening.md
docs/api/: openapi.yaml
migrations/: 0001_init.sql  0002_storage_and_images.sql  0003_audit_jobs_tokens.sql  0004_sessions_and_oidc.sql  0005_sqlite_init.sql  0006_seed_default_storage_policy.sql  0007_quotas.sql
