[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/service",
    "crates/domain",
    "crates/storage",
    "crates/imaging",
    "crates/auth",
    "crates/audit",
    "crates/s3compat",
    "crates/worker",
    "crates/infra",
    "crates/admin",
    "bin/picroom",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.79"
license = "MIT"
publish = false
repository = "https://github.com/picroom/picroom"
homepage = "https://picroom.dev"
authors = ["Picroom Maintainers <maintainers@picroom.dev>"]
description = "Self-hosted image hosting service for teams"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1.12"

# HTTP
axum = { version = "0.7", features = ["macros", "multipart", "http2"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "limit"] }
hyper = { version = "1.10", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "uuid",
    "time",
    "macros",
    "migrate",
] }

# Logging & telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.26", features = ["trace"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Time & IDs
time = { version = "0.3", features = ["serde", "macros"] }
uuid = { version = "1.23", features = ["v7", "serde"] }

# Crypto / auth
argon2 = "0.5"
jsonwebtoken = "9.3"
rand = "0.8"
sha2 = "0.10"
# Constant-time comparisons (SigV4 signature verification).
subtle = "2.6"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# AWS / S3
# (aws-sigv4 / aws-credential-types removed 2026-07: declared but never used —
#  S3 SigV4 is implemented in-house in crates/s3compat.)
quick-xml = { version = "0.41", features = ["serialize"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
ravif = { version = "0.11", default-features = false }
rgb = "0.8"

# OpenAPI
# (utoipa / utoipa-swagger-ui removed 2026-07: declared but never imported —
#  docs/api/openapi.yaml is hand-authored.)

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Misc
url = { version = "2.5", features = ["serde"] }
rand_core = "0.6"

# Internal crates — pinned to the workspace version so the graph is fully
# versioned (spec §7.1) and cargo-deny's wildcard check is satisfied.
picroom-domain = { path = "crates/domain", version = "1.0.0" }
picroom-storage = { path = "crates/storage", version = "1.0.0" }
picroom-imaging = { path = "crates/imaging", version = "1.0.0" }
picroom-auth = { path = "crates/auth", version = "1.0.0" }
picroom-audit = { path = "crates/audit", version = "1.0.0" }
picroom-service = { path = "crates/service", version = "1.0.0" }
picroom-api = { path = "crates/api", version = "1.0.0" }
picroom-s3compat = { path = "crates/s3compat", version = "1.0.0" }
picroom-worker = { path = "crates/worker", version = "1.0.0" }
picroom-infra = { path = "crates/infra", version = "1.0.0" }
picroom-admin = { path = "crates/admin", version = "1.0.0" }

# Dev / test dependencies (used in crate [dev-dependencies])
mockall = "0.13"
proptest = "1.11"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres", "minio"] }
rstest = "0.24"
insta = { version = "1.48", features = ["yaml"] }
pretty_assertions = "1.4"
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.bench]
debug = true
inherits = "release"

[profile.dev]
debug = 1
incremental = true

# Workspace lints (enforced)
[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
return_self_not_must_use = "allow"
unnecessary_wraps = "allow"
manual_let_else = "allow"
case_sensitive_file_extension_comparisons = "allow"
option_if_let_else = "allow"
format_push_string = "allow"
too_many_arguments = "allow"
if_same_then_else = "allow"
unused_async = "allow"
inconsistent_digit_grouping = "allow"
significant_drop_tightening = "allow"
format_collect = "allow"
missing_fields_in_debug = "allow"
struct_excessive_bools = "allow"
items_after_statements = "allow"