[package]
name = "picroom-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Administrative CLI subcommands for Picroom"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
picroom-infra = { workspace = true }
picroom-storage = { workspace = true }
picroom-auth = { workspace = true }
picroom-audit = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true }