[package]
name = "picroom-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "HTTP API for Picroom (axum)"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
picroom-service = { workspace = true }
picroom-auth = { workspace = true }
picroom-audit = { workspace = true }
picroom-infra = { workspace = true }
picroom-storage = { workspace = true }
picroom-s3compat = { workspace = true }
picroom-worker = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "request-id"] }
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
uuid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
serde_json = { workspace = true }
image = { workspace = true }
uuid = { workspace = true }
picroom-auth = { workspace = true }