[package]
name = "picroom-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Append-only audit log for Picroom"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
insta = { workspace = true }