[package]
name = "picroom-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Authentication, authorization, and RBAC for Picroom"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
async-trait = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rand_core = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
pretty_assertions = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }