[package]
name = "picroom-imaging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Image processing pipeline for Picroom"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
image = { workspace = true }
ravif = { workspace = true }
rgb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }