[package]
name = "picroom-s3compat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "AWS S3-compatible endpoint for Picroom"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
picroom-storage = { workspace = true }
picroom-auth = { workspace = true }
picroom-audit = { workspace = true }
picroom-service = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
quick-xml = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }