[package]
name = "picroom-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Use-case services for Picroom"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
picroom-storage = { workspace = true }
picroom-imaging = { workspace = true }
picroom-auth = { workspace = true }
picroom-audit = { workspace = true }
picroom-worker = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
pretty_assertions = { workspace = true }
image = { workspace = true }