[package]
name = "picroom-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Storage abstraction layer for Picroom"

[lints]
workspace = true

[dependencies]
picroom-domain = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
hmac = "0.12"
sha2 = { workspace = true }
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
reqwest = { workspace = true }
mockall = { workspace = true }
proptest = { workspace = true }
pretty_assertions = { workspace = true }
wiremock = "0.6"

[features]
default = []
integration = []